<resources>
    <string name="app_name" translatable="false">EventLink</string>
    <string name="naviga">Naviga</string>
    <string name="apri">Apri</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="contatti" translatable="false">Contatti</string>
    <string name="aiuto">Aiuto!</string>
    <string name="Minus">-</string>
    <string name="Piu">+</string>
    <string name="filtri">Filtri</string>
    <string name="x">x</string>
    <string name="concerto">concerto</string>
    <string name="sport">sport</string>
    <string name="gastronomia">gastronomia</string>
    <string name="convegno">convegno</string>
    <string name="mostra">mostra</string>
    <string name="spettacolo">spettacolo</string>
    <string name="outdoor">outdoor</string>
    <string name="escursione">escursione</string>
    <string name="networking">networking</string>
    <string name="educazione">educazione</string>
    <string name="registrati">Registrati</string>
    <string name="nome">Nome</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="inserisci_cognome">Cognome</string>
    <string name="cognome">Cognome</string>
    <string name="inserisci_nome">Nome</string>
    <string name="seleziona_data_di_nascita">Seleziona data di nascita</string>
    <string name="email">Email</string>
    <string name="inserisci_email">Email</string>
    <string name="numero_di_telefono">Numero di telefono</string>
    <string name="Numero_di_Telefono">Numero di Telefono</string>
    <string name="registrati_btn">Registrati</string>
    <string name="iscriviti">Iscriviti</string>
    <string name="accedi">Accedi</string>
    <string name="password">Password</string>
    <string name="non_hai_un_account_registrati_qui">Non hai un account? Registrati qui</string>
    <string name="niente">NULL</string>
    <string name="visita_guidata_colosseo_n_n5_maggio_14_00">Visita Guidata Colosseo\n\n5 Maggio 14.00</string>
    <string name="annulla">Annulla</string>
    <string name="prenotazioni">Prenotazioni</string>
    <string name="reset_filtri">Reset Filtri</string>
    <string name="applica_filtri">Applica Filtri</string>
    <string name="mappa">Mappa</string>
    <string name="lista">Lista</string>
    <string name="contentdescription">contentDescription</string>
    <string name="profilo">Profilo</string>
    <string name="menu">Menu</string>
    <string name="preferiti">Preferiti</string>
    <string name="hai_dimenticato_la_passowrd_premi_qui">Hai dimenticato la Password? Premi qui</string>
    <string name="invia">Invia</string>
    <string name="passowrd_dimenticata">Password Dimenticata</string>
    <string name="nuovaPassword">Nuova password</string>
    <string name="eliminaAcc">Password</string>
    <string name="oldPass">Vecchia password</string>
    <string name="logout">Logout</string>
    <string name="delAccount">Elimina Account</string>
    <string name="changePass">Cambia Password</string>
    <string name="logoutaaa">Logout</string>
</resources>