<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="-100dp"
            android:layout_gravity="end">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/accedi"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                android:layout_marginTop="45dp"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/inserisci_email"
                android:inputType="textEmailAddress"
                android:padding="1dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/rounded_edittext_background"
                android:padding="1dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry" />
            <Button
                android:id="@+id/buttonlogin"
                style="@style/CustomButtonStyle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:background="@drawable/rounded_bottom_background"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/accedi" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_hai_un_account_registrati_qui"
                android:id="@+id/registatiTesto"
                android:focusable="true"
                android:clickable="true"
                android:layout_marginTop="30dp"
                android:textColor="#0000FF"
                android:layout_marginEnd="20dp"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:id ="@+id/second_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_gravity="bottom"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/bottone_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icons8_menu_208"
                android:scaleType="fitCenter"
                android:contentDescription="@string/contentdescription"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/testo_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/menu">
            </TextView>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <ImageButton
                android:id="@+id/bottone_preferiti"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/icons8_preferiti_60"
                android:contentDescription="@string/contentdescription"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:id="@+id/testo_preferiti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/preferiti">
            </TextView>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/bottone_mappa"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/icons8_mappa_64"
                android:contentDescription="@string/contentdescription"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/testo_mappa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/mappa">
            </TextView>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/bottone_lista"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/icons8_lista_100"
                android:contentDescription="@string/contentdescription"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:id="@+id/testo_lista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lista">
            </TextView>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/bottone_profilo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/icons8_account_96"
                android:contentDescription="@string/contentdescription"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/testo_profilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/profilo">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
